# db-query

./: .gitignore  CLAUDE.md  Makefile  README.md
.claude/: settings.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: databases.py
backend/app/db/: sqlite.py
backend/app/models/: database.py  metadata.py  query.py
backend/app/services/: connection.py  metadata.py  nl_to_sql.py  query.py  validator.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_connection.py  test_metadata.py  test_query.py  test_sqlite.py  test_validator.py
frontend/: .env.example  .gitignore  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/pages/: database-detail.tsx  databases.tsx
frontend/src/providers/: data-provider.tsx
frontend/src/services/: api.test.ts  api.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.test.ts  index.ts
frontend/src/utils/: errors.ts
frontend/tests/e2e/: database.spec.ts
specs/: instructions.md
specs/001-db-query-tool/: data-model.md  implementation-record.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-db-query-tool/checklists/: requirements.md
specs/001-db-query-tool/contracts/: api.md
specs/001-db-query-tool/records/: debug-record.md  (+1 more)
test/rest/: postgres.rest
(+17 files in other folders)
